fix(drawer): fjern overflow hidden på ytterste nivå

--- a/npm/designsystem/src/components/Drawer/styles.module.scss
+++ b/npm/designsystem/src/components/Drawer/styles.module.scss
@@ -43,7 +43,6 @@
     position: fixed;
     width: 100%;
     max-height: 90dvh;
-    overflow: hidden;
     transform: translateY(100%);
     background-color: var(--core-color-white);
     border-radius: 0.75rem 0.75rem 0 0;
